crates/tt-cli/src/commands/snapshots/tt_cli__commands__streams__tests__streams_empty_database.snap
---
source: crates/tt-cli/src/commands/streams/tests.rs
expression: output
---
STREAMS (last 7 days)

No streams with activity in the last 7 days.

Hint: Run 'ssh <remote> tt export | tt import' to import events from a remote host.
