crates/tt-cli/src/commands/snapshots/tt_cli__commands__streams__tests__streams_multiple_with_tags.snap
---
source: crates/tt-cli/src/commands/streams/tests.rs
expression: output
---
STREAMS (last 7 days)

ID       Slug              Name                      Direct  Delegated  Tags
───────  ────────────────  ──────────────────────  ────────  ─────────  ──────────────────
abc123   acme-sprint-42    tmux/dev/session-1        2h 15m     4h 30m  acme-webapp, urgent
def456   -                 tmux/dev/session-2           45m     1h 20m  internal
ghi789   -                 tmux/staging/session-1       30m        15m  

Times last computed 1d ago. Run 'tt recompute' to refresh.
Tip: Use 'tt tag <id> <tag>' to group sessions into projects.
