crates/tt-cli/src/commands/snapshots/tt_cli__commands__streams__tests__streams_single_stream_no_tags.snap
---
source: crates/tt-cli/src/commands/streams/tests.rs
expression: output
---
STREAMS (last 7 days)

ID       Slug              Name                      Direct  Delegated  Tags
───────  ────────────────  ──────────────────────  ────────  ─────────  ──────────────────
abc123   acme-sprint-42    tmux/dev/session-1        2h 15m     4h 30m  

Times last computed 1d ago. Run 'tt recompute' to refresh.
Tip: Use 'tt tag <id> <tag>' to group sessions into projects.
